--- a/src/General/style.css
+++ b/src/General/style.css
@@ -17,10 +17,10 @@ header .search-block {
     justify-content: center;
 }
 .header__meny {
-    font-size: 2rem;
+    font-size: 3rem;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
 }
 .header_meny>span>*{
     cursor: pointer;
@@ -69,7 +69,7 @@ header .search-block {
     background-repeat: no-repeat;
     background-size: 100%;
     text-align: center;
-    margin: 100px;
+    margin-top: 100px;
     position: inherit;
 }
 .adblock1 {
